sắp xong part 3

--- a/src/main/resources/templates/book-view/find-book.html
+++ b/src/main/resources/templates/book-view/find-book.html
@@ -39,7 +39,7 @@
             <i class="fas fa-book mr-2"></i>Quản lý sách
         </a>
         <a th:href="@{/home/book/find-book(username=${username})}"
-           class="list-group-item list-group-item-action text-primary border-0">
+           class="list-group-item list-group-item-action text-light border-0">
             <i class="fas fa-search mr-2"></i> <b>Tìm sách</b>
         </a>
         <a th:href="@{/home/book/add-book(username=${username})}"
