--- a/src/main/resources/templates/reader-view/add-reader.html
+++ b/src/main/resources/templates/reader-view/add-reader.html
@@ -41,8 +41,8 @@
             <i class="fas fa-search mr-2"></i> Tìm kiếm độc giả
         </a>
         <a th:href="@{/home/reader/add-reader(username=${username})}"
-           class="list-group-item list-group-item-action border-0">
-            <i class="fas fa-plus mr-2 text-primary"></i><b class="text-primary">Đăng ký độc giả mới</b>
+           class="list-group-item list-group-item-action text-light border-0">
+            <i class="fas fa-plus mr-2 "></i><b>Đăng ký độc giả mới</b>
         </a>
         <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
             <i class="fas fa-home mr-2"></i> Quay lại trang chủ
