--- a/src/main/resources/templates/reader-view/reader.html
+++ b/src/main/resources/templates/reader-view/reader.html
@@ -33,7 +33,7 @@
 
         </div>
         <a th:href="@{/home/reader/readers(username=${username})}" class="list-group-item list-group-item-action border-0">
-            <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý độc giả</b>
+            <i class="fas fa-book mr-2 text-light"></i> <b class="text-light">Quản lý độc giả</b>
         </a>
         <a th:href="@{/home/reader/find-reader(username=${username})}" class="list-group-item list-group-item-action border-0">
             <i class="fas fa-search mr-2"></i> Tìm kiếm độc giả
