--- a/src/main/resources/templates/book-view/add-book.html
+++ b/src/main/resources/templates/book-view/add-book.html
@@ -42,7 +42,7 @@
             <i class="fas fa-search mr-2"></i> Tìm sách
         </a>
         <a th:href="@{/home/book/add-book(username=${username})}"
-           class="list-group-item list-group-item-action text-primary border-0">
+           class="list-group-item list-group-item-action text-light border-0">
             <i class="fas fa-plus mr-2"></i> <b>Thêm sách</b>
         </a>
         <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
