--- a/src/main/resources/templates/book-view/book.html
+++ b/src/main/resources/templates/book-view/book.html
@@ -35,7 +35,7 @@
             <img th:src="@{/css/assets/logo.png}" alt="">
         </div>
         <a th:href="@{/home/book/books(username=${username})}"
-           class="list-group-item list-group-item-action text-primary border-0">
+           class="list-group-item list-group-item-action text-light border-0">
             <i class="fas fa-book mr-2"></i><b>Quản lý sách</b>
         </a>
         <a th:href="@{/home/book/find-book(username=${username})}"
