--- a/src/main/resources/templates/reader-view/find-reader.html
+++ b/src/main/resources/templates/reader-view/find-reader.html
@@ -35,8 +35,8 @@
     <a th:href="@{/home/reader/readers(username=${username})}" class="list-group-item list-group-item-action border-0">
       <i class="fas fa-book mr-2 "></i>Quản lý độc giả
     </a>
-    <a th:href="@{/home/reader/find-reader(username=${username})}" class="list-group-item list-group-item-action border-0">
-      <i class="fas fa-search mr-2 text-primary"> </i> <b class="text-primary">Tìm kiếm độc giả</b>
+    <a th:href="@{/home/reader/find-reader(username=${username})}" class="list-group-item list-group-item-action text-light border-0">
+      <i class="fas fa-search mr-2 "> </i> <b >Tìm kiếm độc giả</b>
     </a>
     <a th:href="@{/home/reader/add-reader(username=${username})}" class="list-group-item list-group-item-action border-0">
       <i class="fas fa-plus mr-2"></i> Đăng ký độc giả mới
@@ -51,9 +51,9 @@
       <div class="col-8">
         <form th:action="@{/home/reader/find-reader(username=${username})}" method="post">
           <div class="find-search input-group mb-3">
-            <input type="text" class="form-control" th:value="${idReader}" name="idReader" placeholder="mã độc giả"
+            <input type="text" class="form-control"  name="idReader" placeholder="mã độc giả"
                    autofocus>
-            <input type="text" class="form-control" th:value="${nameReader}" name="nameReader"
+            <input type="text" class="form-control"  name="nameReader"
                    placeholder="tên độc giả">
             <div class="input-group-append">
               <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
