--- a/src/main/resources/templates/slip-view/create-pay.html
+++ b/src/main/resources/templates/slip-view/create-pay.html
@@ -22,7 +22,7 @@
 <div class="header d-flex justify-content-between">
     <h5>Quản lý trả sách</h5>
     <div>
-        <strong><a class="text-success" th:text="${username}">Username</a></strong>
+        <strong><a class="text-success" th:text="${username}" id="username">Username</a></strong>
         <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
     </div>
 </div>
@@ -34,10 +34,10 @@
 
         </div>
         <a th:href="@{/home/pay-slip/pay-slips(username=${username})}" class="list-group-item list-group-item-action border-0">
-            <i class="fas fa-book mr-2 text-primary"></i> Quản lý trả sách
+            <i class="fas fa-book mr-2 "></i> Quản lý trả sách
         </a>
         <a th:href="@{/home/pay-slip/create-pay(username=${username})}" class="list-group-item list-group-item-action border-0">
-            <i class="fas fa-plus mr-2 text-primary"></i> <b class="text-primary">Trả sách</b>
+            <i class="fas fa-plus mr-2 text-light"></i> <b class="text-light">Trả sách</b>
         </a>
         <a th:href="@{/home/pay-slip/find-pay(username=${username})}" class="list-group-item list-group-item-action border-0">
             <i class="fas fa-search mr-2"></i> Tìm kiếm
@@ -198,14 +198,13 @@
                 $("#books-to-pay tbody").html(row);
             },
             error: function (xhr) {
-                alert("eeeeee");
                 console.log(xhr);
             }
         })
     }
 
     function createPaySlip() {
-        var idSlip = $("#idSlip").text();
+        var idSlip = $("#idSlip").val();
         var librarianName = $("#username").text();
         var bookCodes = [];
 
