--- a/src/main/resources/templates/slip-view/pay-slip.html
+++ b/src/main/resources/templates/slip-view/pay-slip.html
@@ -34,7 +34,7 @@
 
         </div>
         <a th:href="@{/home/pay-slip/pay-slips(username=${username})}" class="list-group-item list-group-item-action border-0">
-            <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý trả sách</b>
+            <i class="fas fa-book mr-2 text-light"></i> <b class="text-light">Quản lý trả sách</b>
         </a>
         <a th:href="@{/home/pay-slip/create-pay(username=${username})}" class="list-group-item list-group-item-action border-0">
             <i class="fas fa-plus mr-2"></i> Trả sách
@@ -46,7 +46,7 @@
         <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
             <i class="fas fa-home mr-2"></i> Quay lại trang chủ
         </a>
-    </div>1
+    </div>
 
     <div class="content">
         <div class="d-flex">
